# recommender-system-assignments

./: .gitignore
job-recom/: .ibsec  pyproject.toml  requirements.txt
job-recom/notebooks/: experiment.ipynb
job-recom/recommender/: __init__.py  database.py  recommend.py
job-recom/scripts/: create_embedding.py  seed_data.py
job-recom/sei/: __init__.py  __main__.py  user_form.py
job-recom/sei/pages/: home.py  viz_data.py
symptom-recom/: main.py
